--- a/package.json
+++ b/package.json
@@ -1,35 +1,43 @@
 {
-  "name": "nom-du-projet",
-  "version": "0.1.0",
+  "name": "react-test",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "@uidotdev/usehooks": "^2.4.1",
     "d3": "^7.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "next": "15.0.2",
     "prettier": "^3.3.3",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
     "sass": "^1.80.5",
     "world-atlas": "^2.0.2",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.11.0",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.11.0",
+    "vite": "^5.4.10",
     "@types/d3": "^7.4.3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "@types/topojson-client": "^3.1.5",
-    "eslint": "^9.13.0",
     "eslint-config-next": "^15.0.2",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "typescript": "^5"
+    "eslint-plugin-unused-imports": "^4.1.4"
   }
 }
