--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@uidotdev/usehooks": "^2.4.1",
     "d3": "^7.9.0",
+    "d3-geo": "^3.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "next": "15.0.2",
