--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.80.5",
+    "topojson-client": "^3.1.0",
     "usehooks-ts": "^3.1.0",
     "world-atlas": "^2.0.2",
     "zustand": "^5.0.1"
